--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-	"name": "IsmanOfc",
+	"name": "ArfanBotz",
 	"description": "WhatsApp Bot Using Lib Baileys",
-	"repository": "https://github.com/Xavior88",
+	"repository": "https://github.com/arfanaja",
 	"logo": "https://node-js-sample.herokuapp.com/node.png",
 	"keywords": ["multi-device"]
 }
